--- a/debian/changelog
+++ b/debian/changelog
@@ -5,7 +5,7 @@ artisan (0.3.3-2) maverick; urgency=low
    - revised
    - moves filterdropouts() from ser to qmc.
 
- -- lukas <lukas@larosa.fritz.box>  Mon, 14 Feb 2011 00:47:11 +0100
+ -- lukas <lukas@einfachkaffee.de>  Mon, 14 Feb 2011 00:47:11 +0100
 
 artisan (0.3.3-1) maverick; urgency=low
 
