--- a/debian/usr/share/doc/artisan/changelog
+++ b/debian/usr/share/doc/artisan/changelog
@@ -5,7 +5,7 @@ artisan (0.6.0-1) precise; urgency=low
    - added Modbus support
    - bug fixes
 
- --  <marko.luther@gmx.net>  Fr, 31 May 2013 19:32:14 +0200
+ --  <marko.luther@gmx.net>  Fri, 31 May 2013 19:32:14 +0200
 
 artisan (0.5.2-0) maverick; urgency=low
 
