--- a/debian/usr/share/doc/artisan/changelog
+++ b/debian/usr/share/doc/artisan/changelog
@@ -1,3 +1,23 @@
+artisan (0.7.0-1) precise; urgency=low
+
+  * new upstream release
+  * changes since 0.6.0:
+   - support for the Phidget 1046/1048 devices
+   - TP event marks (show on graph and in the message log)
+   - phase LCDs (TP, DRY, FCs) estimating time to the event and counting time after the event (aka a roast development counter)
+   - adds autoDRY and autoFCs
+   - links profiles to background profiles
+   - new graph style using xkcd, path effects and the Humor or Comic font
+   - allows ETBTa and RoR statistics to be displayed together
+   - various extensions to the alarms system
+   - keyboard control for sliders
+   - adds support for the (to be released) Tonino roast color meter
+   - some Fuji PID control enhancements
+   - improved manual mode
+   - bug fixes
+
+ --  <marko.luther@gmx.net>  Fri, 15 Nov 2013 19:32:14 +0200
+
 artisan (0.6.0-1) precise; urgency=low
 
   * new upstream release
