updates version to 0.7.1

--- a/debian/usr/share/doc/artisan/changelog
+++ b/debian/usr/share/doc/artisan/changelog
@@ -1,3 +1,12 @@
+artisan (0.7.1-1) precise; urgency=low
+  * new upstream release
+  * fixes since 0.7.0:
+   - redraw issue on axis changes
+   - lock up due to extra devices
+   - serial default configurations for extra devices
+   - fixes minieditor navigation
+ --  <marko.luther@gmx.net>  Mo, 1 Dez 2013 19:32:14 +0200
+
 artisan (0.7.0-1) precise; urgency=low
 
   * new upstream release
