--- a/debian/usr/share/doc/artisan/changelog
+++ b/debian/usr/share/doc/artisan/changelog
@@ -1,3 +1,9 @@
+artisan (0.7.4-1) precise; urgency=low
+  * new upstream release
+  * fixes since 0.7.3:
+   - fixes ETBT swap functionality
+ --  <marko.luther@gmx.net>  Mon, 13 Jan 2014 19:32:14 +0200
+ 
 artisan (0.7.3-1) precise; urgency=low
   * new upstream release
   * fixes since 0.7.2:
