--- a/debian/usr/share/doc/artisan/changelog
+++ b/debian/usr/share/doc/artisan/changelog
@@ -1,9 +1,28 @@
+artisan (0.7.5-1) precise; urgency=low
+  * new upstream release
+  * changes since 0.7.4:
+   - improved serial communication
+   - fixed extra event manual entry to allow digits
+   - adds Phidgets 1048 probe type configuration
+   - adds security patch
+   - fixed background profile color selection
+   - increased resolution of temperatures in profiles to two digits
+   - adds event quantifiers
+   - adds CM correlation measure between fore- and background profile to statistics bar
+   - font fix for OS X 10.9
+   - adds symbolic variables for background temperatures for symbolic assignments
+   - adds xy scale toggle via key d
+   - adds modbus temperature mode per channel
+   - updated Modbus lib
+   - adds Modbus/Fuji merger
+ --  <marko.luther@gmx.net>  Thu, 3 Apr 2014 19:32:14 +0200
+
 artisan (0.7.4-1) precise; urgency=low
   * new upstream release
   * fixes since 0.7.3:
    - fixes ETBT swap functionality
  --  <marko.luther@gmx.net>  Mon, 13 Jan 2014 19:32:14 +0200
- 
+
 artisan (0.7.3-1) precise; urgency=low
   * new upstream release
   * fixes since 0.7.2:
