--- a/debian/usr/share/doc/artisan/changelog
+++ b/debian/usr/share/doc/artisan/changelog
@@ -1,12 +1,21 @@
 artisan (0.9.0-1) precise; urgency=low
   * new upstream release
   * changes since 0.8.0:
-   - adds Mastech MS6514 support
-   - adds Phidget IO support
-   - adds Phidget remote support
-   - adds Arduino TC4 PID support
+   - adds MODBUS ASCII/TCP/UDP support
+   - adds Yocto TC and PT100 support
+   - adds Phidget 1045 IR support
+   - adds Phidget 1046 Wheatstone Bridge wiring support
+   - adds Phidgets async mode
+   - adds Polish translations
+   - adds LargeLCDs and WebLCDs
+   - adds 2nd set of roast phases
+   - adds volume calculator
+   - adds moisture loss and organic loss
+   - adds container tar
+   - adds RoR delta span
+   - adds phasesLCDs showing Rao's development ratio
    - bug fixes
- --  <marko.luther@gmx.net>  Sun, 25 May 2014 19:32:14 +0200
+ --  <marko.luther@gmx.net>  Mon, 17 Nov 2014 19:32:14 +0200
  
 artisan (0.8.0-1) precise; urgency=low
   * new upstream release
