--- a/debian/usr/share/doc/artisan/changelog
+++ b/debian/usr/share/doc/artisan/changelog
@@ -1,3 +1,11 @@
+artisan (0.9.1-1) precise; urgency=low
+  * new upstream release
+  * changes since 0.9.0:
+   - adds QR code for WebLCD URL
+   - adds acaia scale support
+   - lib updates and bug fixes
+ --  <marko.luther@gmx.net>  Sat, 3 Jan 2014 19:32:14 +0200
+
 artisan (0.9.0-1) precise; urgency=low
   * new upstream release
   * changes since 0.8.0:
