--- a/debian/usr/share/doc/artisan/changelog
+++ b/debian/usr/share/doc/artisan/changelog
@@ -1,3 +1,9 @@
+artisan (0.9.2-1) precise; urgency=low
+  * new upstream release
+  * changes since 0.9.1:
+   - bug fixes
+ --  <marko.luther@gmx.net>  Fri, 16 Jan 2014 19:32:14 +0200
+ 
 artisan (0.9.1-1) precise; urgency=low
   * new upstream release
   * changes since 0.9.0:
